gunicorn (19.3-1) UNRELEASED; urgency=medium

  * New upstream release (Closes: #803086)
  * Update debian/watch to not use deprecated githubredir.

 -- Chris Lamb <lamby@debian.org>  Mon, 26 Oct 2015 21:22:00 +0000

gunicorn (19.0-8) unstable; urgency=medium

  * Drop dependency on python-tox now that tests are disabled.
    (Closes: #798798)

 -- Chris Lamb <lamby@debian.org>  Sat, 12 Sep 2015 23:35:09 +0100

gunicorn (19.0-7) unstable; urgency=medium

  * Use a no-op dh_auto_test to disable tox tests over not exporting
    PYBUILD_TEST_TOX. (Closes: #796432)

 -- Chris Lamb <lamby@debian.org>  Fri, 21 Aug 2015 22:52:57 +0200

gunicorn (19.0-6) unstable; urgency=medium

  * Correct B+R version number to 19.0-3 & add B+R to python-gunicorn. Thanks
    to Andreas Beckmann (anbe). (Closes: #790518)

 -- Chris Lamb <lamby@debian.org>  Wed, 01 Jul 2015 18:06:45 +0100

gunicorn (19.0-5) unstable; urgency=medium

  * Add Replaces and Breaks to ensure upgrade path from testing.
    (Closes: #790518)

 -- Chris Lamb <lamby@debian.org>  Tue, 30 Jun 2015 11:37:24 +0100

gunicorn (19.0-4) unstable; urgency=medium

  * Add entry for docs/sitemap_gen.py in debian/copyright.
    (Closes: #790314)
  * Use system jQuery libraries to appease Lintian's
    privacy-breach-may-use-debian-package.

 -- Chris Lamb <lamby@debian.org>  Sun, 28 Jun 2015 00:34:01 +0100

gunicorn (19.0-3) unstable; urgency=medium

  * Set Section to "httpd".
  * Bump Standards-Version to 3.9.6.
  * Bump debhelper compat level to 9.
  * Call wrap-and-sort.

  [ Barry Warsaw ]
  * Add Python 3 support. (Closes: #756057)
  * d/control:
    - Split the gunicorn package into separate binary packages for the
      Python 2 and 3 library, the Python 2 and 3 command line scripts, and
      common files.
    - Update build dependencies for Python 3.
  * d/compat: Bump to version 8.
  * d/patches/0001-drop-supplemental-groups.patch: Adapt for Python 3.
  * d/rules:
    - Use --buildsystem=pybuild and dh_python3.